Word wrap fix
the lines will now break in the middle of the number, and the solution is now rounded to the nearest 100000th place

--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,9 @@ body{
     border-radius: .25rem;
     width:90%;
     text-align:center;
-    line-height: 7rem;
+    line-height: 3rem;
     vertical-align: middle;
+    word-wrap: break-word;
     
     font-size:3rem;
   }
@@ -100,7 +101,7 @@ body{
     margin-right:.25rem;
     color:rgb(81, 0, 0);
     background-color:blanchedalmond;
-    border:2px solid rgb(81,0,0);
+    border:4px solid rgb(81,0,0);
     
 
     
